--- a/ConvexHull/nbproject/private/private.properties
+++ b/ConvexHull/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\12345\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Marek\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
